--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.10"
 jinja2 = "*"
-pytest = "^5.2.2"
+pytest = "7.1.3"
 pytest-metadata = "*"
 
 [tool.poetry.dev-dependencies]
@@ -49,7 +49,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.black]
 line-length = 100
-target-version = ['py36', 'py37', 'py38']
+target-version = ['py36', 'py37', 'py38', 'py310']
 include = '\.pyi?$'
 exclude = '''
 /(
