--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,15 @@
 [tox]
 isolated_build = true
 envlist =
-    py36-pytest{3,4,5},
-    py37-pytest{3,4,5}
+    py310-pytest{7}
 
 [testenv]
 deps =
     pytest3: pytest == 3.10.1
     pytest4: pytest == 4.6.6
     pytest5: pytest == 5.2.2
+    pytest6: pytest == 6.2.4
+    pytest7: pytest == 7.1.3
 whitelist_externals = poetry
 commands =
     poetry install -v
