--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
+        pytest-version: ["6", "7"]
 
     steps:
       - uses: actions/checkout@v3
@@ -19,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          poetry install
+          poetry install -v
       - name: Test with pytest
         run: |
-          poetry run pytest
+          poetry run tox -e py${{ matrix.python-version }}-pytest${{ matrix.pytest-version }}
