--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,16 @@
 [tox]
 isolated_build = true
 envlist =
-    py36-pytest{3,4,5},
-    py37-pytest{3,4,5}
+    py3.7-pytest{6,7},
+    py3.8-pytest{6,7},
+    py3.9-pytest{6,7},
+    py3.10-pytest{6,7},
 
 [testenv]
 deps =
-    pytest3: pytest == 3.10.1
-    pytest4: pytest == 4.6.6
-    pytest5: pytest == 5.2.2
+    pytest6: pytest == 6.2.5
+    pytest7: pytest == 7.1.3
 whitelist_externals = poetry
 commands =
     poetry install -v
-    poetry run pytest tests/
-
-[testenv:flake8]
-skip_install = true
-deps = flake8
-commands = flake8 pytest_jinja.py setup.py tests
+    poetry run pytest -p pytest-jinja
